[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/menu/arcade_menu_scene/ArcadeDifficultySetter.gd" type="Script" id=1]
[ext_resource path="res://src/menu/arcade_menu_scene/DifficultyFont.tres" type="DynamicFont" id=2]

[node name="ArcadeDifficultySetterControl" type="Control"]
anchor_right = 0.94
anchor_bottom = 0.09
script = ExtResource( 1 )

[node name="NoobButton" type="Button" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.3
anchor_bottom = 0.9
custom_colors/font_color_disabled = Color( 0.564706, 0.564706, 0.564706, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Noob"

[node name="RegularButton" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.1
anchor_right = 0.6
anchor_bottom = 0.9
custom_colors/font_color_disabled = Color( 0.564706, 0.564706, 0.564706, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Regular"

[node name="ProButton" type="Button" parent="."]
anchor_left = 0.7
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
custom_colors/font_color_disabled = Color( 0.564706, 0.564706, 0.564706, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Pro"

[connection signal="pressed" from="NoobButton" to="." method="_on_NoobButton_pressed"]
[connection signal="pressed" from="RegularButton" to="." method="_on_RegularButton_pressed"]
[connection signal="pressed" from="ProButton" to="." method="_on_ProButton_pressed"]
